--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,10 @@ RoxygenNote: 7.1.2
 Imports: 
     data.table,
     dplyr,
-    lubridate
+    ggplot2,
+    ggsci,
+    lubridate,
+    purrr,
+    tidyr
 URL: https://github.com/044mj/cvera
 BugReports: https://github.com/044mj/cvera/issues
-
-
