--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ import(ggplot2)
 importFrom(data.table,between)
 importFrom(dplyr,if_else)
 importFrom(ggsci,scale_color_nejm)
+importFrom(kableExtra,kable_styling)
+importFrom(knitr,kable)
 importFrom(lubridate,date)
 importFrom(lubridate,year)
 importFrom(purrr,reduce)
