--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
+    cowplot,
     data.table,
     dplyr,
     ggplot2,
@@ -20,6 +21,7 @@ Imports:
     kableExtra,
     knitr,
     lubridate,
+    plotly,
     purrr,
     tidyr
 URL: https://github.com/044mj/cvera
