--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,11 @@
 
 export(all_cases_per_year)
 export(bd_during)
+export(herd_plot)
 import(dplyr, except = between)
 import(ggplot2)
+importFrom(cowplot,background_grid)
+importFrom(cowplot,theme_cowplot)
 importFrom(data.table,between)
 importFrom(dplyr,if_else)
 importFrom(ggsci,scale_color_nejm)
@@ -11,5 +14,7 @@ importFrom(kableExtra,kable_styling)
 importFrom(knitr,kable)
 importFrom(lubridate,date)
 importFrom(lubridate,year)
+importFrom(plotly,ggplotly)
+importFrom(plotly,layout)
 importFrom(purrr,reduce)
 importFrom(tidyr,pivot_longer)
