--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(all_cases_per_year)
 export(bd_during)
+export(bd_during_year)
 export(herd_plot)
 import(dplyr, except = between)
 import(ggplot2)
