core_vars added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(all_cases_per_year)
 export(bd_dataset_fun)
 export(bd_during)
 export(bd_during_year)
+export(core_vars)
 export(herd_plot)
 import(dplyr, except = between)
 import(ggplot2)
