bd_within_time_period function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(all_cases_per_year)
 export(bd_dataset_fun)
 export(bd_during)
 export(bd_during_year)
+export(bd_within_time_period)
 export(core_vars)
 export(herd_plot)
 import(dplyr, except = between)
@@ -20,5 +21,6 @@ importFrom(lubridate,year)
 importFrom(plotly,ggplotly)
 importFrom(plotly,layout)
 importFrom(purrr,reduce)
+importFrom(rlang,":=")
 importFrom(sjlabelled,var_labels)
 importFrom(tidyr,pivot_longer)
